working on navigation sliding to correct section, and spacing of sections

--- a/portfolio/src/components/splash/landing.css
+++ b/portfolio/src/components/splash/landing.css
@@ -28,12 +28,11 @@
     background: transparent;
 }
 
-.slides > div {
+.slides > .card {
     scroll-snap-align: start;
-    min-width: 350px;
-    width: 100vw;
-    padding: 2%;
-    margin: 2% 5%;
+    min-width: 400px;
+    padding: 1% 2%;
+    margin: 2% 0 1% 10%;
     border-radius: 10px;
     color: #fff;
     background: #045175;
